# Rinha-de-Backend-2026

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  info.json
docker/: Dockerfile
docker/HAProxy/: haproxy.cfg
include/: cluster.hpp  kmeanspp.hpp  kmknn.hpp  kmppknn.hpp  network.hpp  vector.hpp
resources/parsed_outputs/: normal_payload_out.txt
src/: README.md  cluster.cpp  kmeanspp.cpp  kmknn.cpp  kmppknn.cpp  main.c  main.cpp  network.c  network.cpp  payloads_output.txt  references_output.txt  vector.cpp
